sr-only h1 added

--- a/index.html
+++ b/index.html
@@ -12,8 +12,14 @@
   
 </head>
 <body>
+
+  <h1 class="sr-only">
+    welcome to our autoshop
+  </h1>
   
   <main class="cards">
+
+    
 
     <div class="cards__item">
       <div class="cards__item__icon">
