--- a/index.html
+++ b/index.html
@@ -13,60 +13,61 @@
 </head>
 <body>
 
-  <h1 class="sr-only">
-    welcome to our autoshop
-  </h1>
+  <main class="component">
+
+    <h1 class="sr-only">
+      welcome to our autoshop
+    </h1>
+
+    <div class="cards">
+      <div class="cards__item">
+        <div class="cards__item__icon">
+          <img src="./images/icon-sedans.svg" alt="">
+        </div>
+        <h2 class="cards__item__title">
+          sedans
+        </h2>
+        <p class="cards__item__p">
+          Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.
+        </p>
+        <a href="#" class="cards__item__a">
+          Learn More
+        </a>
+      </div>
   
-  <main class="cards">
-
-    
-
-    <div class="cards__item">
-      <div class="cards__item__icon">
-        <img src="./images/icon-sedans.svg" alt="">
+      <div class="cards__item">
+        <div class="cards__item__icon">
+          <img src="./images/icon-suvs.svg" alt="">
+        </div>
+        <h2 class="cards__item__title">
+          suvs
+        </h2>
+        <p class="cards__item__p">
+          Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.     
+         </p>
+         <a href="#" class="cards__item__a">
+          Learn More
+        </a>
       </div>
-      <h2 class="cards__item__title">
-        sedans
-      </h2>
-      <p class="cards__item__p">
-        Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.
-      </p>
-      <a href="#" class="cards__item__a">
-        Learn More
-      </a>
-    </div>
-
-    <div class="cards__item">
-      <div class="cards__item__icon">
-        <img src="./images/icon-suvs.svg" alt="">
+  
+      <div class="cards__item">
+        <div class="cards__item__icon">
+          <img src="./images/icon-luxury.svg" alt="">
+        </div>
+        <h2 class="cards__item__title">
+          luxury
+        </h2>
+        <p class="cards__item__p">
+          Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style. 
+        </p>
+        <a href="#" class="cards__item__a">
+          Learn More
+        </a>
       </div>
-      <h2 class="cards__item__title">
-        suvs
-      </h2>
-      <p class="cards__item__p">
-        Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.     
-       </p>
-       <a href="#" class="cards__item__a">
-        Learn More
-      </a>
-    </div>
-
-    <div class="cards__item">
-      <div class="cards__item__icon">
-        <img src="./images/icon-luxury.svg" alt="">
-      </div>
-      <h2 class="cards__item__title">
-        luxury
-      </h2>
-      <p class="cards__item__p">
-        Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style. 
-      </p>
-      <a href="#" class="cards__item__a">
-        Learn More
-      </a>
+  
     </div>
 
   </main>
-  
+
 </body>
 </html>
